err/django-environment.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_env'...
Listing './lib/python3.5/site-packages/django_env/bin'...
Compiling './lib/python3.5/site-packages/django_env/bin/install.py'...
***   File "./lib/python3.5/site-packages/django_env/bin/install.py", line 12
    print "ERROR: The $WORKON_HOME environment variable is not set. Please check to make sure you've installed and setup virtualenvwrapper correctly."
                                                                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_env/bin/uninstall.py'...
***   File "./lib/python3.5/site-packages/django_env/bin/uninstall.py", line 16
    print "Django-environment uninstalled."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_env/config'...
Listing './lib/python3.5/site-packages/django_env/utils'...
Compiling './lib/python3.5/site-packages/django_env/utils/get_django_env_settings.py'...
***   File "./lib/python3.5/site-packages/django_env/utils/get_django_env_settings.py", line 14
    print val
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_env/utils/vcs.py'...
***   File "./lib/python3.5/site-packages/django_env/utils/vcs.py", line 24
    print """Error: VCS URL wasn't in the correct format

Examples:
git+git://github.com/epicserve/django-base-site.git.
hg+https://epicserve@bitbucket.org/epicserve/django-base-site
svn+ssh://user@ssh.yourdomain.com/path/to/django-base-site/trunk
file:///Users/username/code/django/django-base-site"""
                                                        

         
                                                    
                                                             
                                                                
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_environment-0.3.8.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_clone-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './lib/python3.5/site-packages/virtualenvwrapper'...
Listing './lib/python3.5/site-packages/virtualenvwrapper-4.8.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
